test/sema/import-header-twice/b.delta
// RUN: %check_errors %delta -typecheck ./a.delta ./b.delta

import "header.h"

void main() {
    // CHECK-NOT: error: ambiguous reference to 'foo'
    foo(a)
}
